fixes some issue and added some more fieature in api
