# controllers/comment.controller.js
@@ -10,8 +10,10 @@ const createComment = async (req, res, next) => {
     }
 
     const posts = await Post.findById(post);
+    if(!posts) {
+       return next(new ApiError(404, 'Post not found'));
+    }
 
-    if (posts) {
       const comment = await Comment.create({
         content,
         user: req.user._id,
@@ -19,12 +21,41 @@ const createComment = async (req, res, next) => {
       });
       posts.comments.push(comment);
       await posts.save();
-    }
-    res.status(201).json({ msg: "Comment created successfully!" });
+    
+    res.status(201).json({ comment, msg: "Comment created successfully!" });
   } catch (error) {
     next(error);
   }
 };
+
+
+const getComment = async(req, res, next)=> {
+  try {
+    const {id:postId} = req.params;
+    const comment = await Comment.find({postId});
+    if(!comment) {
+      return next(new ApiError(404, 'Comment not found'));
+    }
+    res.status(200).json({comment})
+  } catch (error) {
+    next(error);
+  }
+}
+
+
+const updateComment = async(req, res, next)=> {
+  try {
+    const {commentId} = req.params;
+    const comment = await Comment.findOneAndUpdate({_id:commentId}, req.body,{
+      new:true,
+      runValidators:true
+    });
+    res.status(200).json({comment, msg:'Comment updated'});
+  } catch (error) {
+    console.log(error);
+    next(error);
+  }
+}
 
 const deleteComment = async (req, res, next) => {
   try {
@@ -45,4 +76,4 @@ const deleteComment = async (req, res, next) => {
   }
 };
 
-export { createComment, deleteComment };
+export { createComment, deleteComment, getComment, updateComment };
