# controllers/post.controller.js
@@ -1,14 +1,16 @@
 import { ApiError } from "../utils/apiError.js";
 import { Post } from "../models/post.model.js";
+import { User } from "../models/user.model.js";
+import {Comment} from '../models/comment.model.js';
 
 const createPost = async (req, res, next) => {
   try {
-    const { content } = req.body;
-    if (!content) {
+    const { caption } = req.body;
+    if (!caption) {
       return next(new ApiError(400, "Please provide all fields"));
     }
-    const post = await Post.create({ content, user: req.user._id });
-    res.status(201).json({ msg: "Post created", post });
+    const post = await Post.create({ caption, user: req.user._id });
+    res.status(201).json({post, msg: "Post created", post });
   } catch (error) {
     next(error);
   }
@@ -16,26 +18,8 @@ const createPost = async (req, res, next) => {
 
 const getAllPosts = async (req, res, next) => {
   try {
-    const posts = await Post.find()
-      .populate("user")
-      .populate({
-        path: "comments",
-        populate: {
-          path: "user",
-        },
-        populate: {
-          path: "likes",
-          populate: {
-            path: "user",
-          },
-        },
-      })
-      .populate({
-        path: "likes",
-        populate: {
-          path: "user",
-        },
-      });
+    const posts = await Post.find().populate('user');
+     
     if (!posts) {
       return next(new ApiError(404, "Post not found"));
     }
@@ -45,17 +29,29 @@ const getAllPosts = async (req, res, next) => {
   }
 };
 
+
+const getPostsByUser = async(req, res, next)=> {
+  try {
+    const userId = req.user._id;
+    const user = await User.findById(userId);
+    if(!user) {
+      return next(new ApiError(404, 'User not found'));
+    }
+    const posts = await Post.find({user:userId});
+    if(!posts) {
+      return next(new ApiError(404, 'Post not found'));
+    }
+    res.status(200).json({posts});
+  } catch (error) {
+    next(error);
+  }
+}
+
 const getSingalPost = async (req, res, next) => {
   try {
     const { postId } = req.params;
-    const post = await Post.findById(postId)
-      .populate("user")
-      .populate({
-        path: "comments",
-        populate: {
-          path: "user",
-        },
-      });
+    const post = await Post.findById(postId);
+      
     if (!post) {
       return next(new ApiError(404, "Post not found"));
     }
@@ -68,6 +64,10 @@ const getSingalPost = async (req, res, next) => {
 const updatePost = async (req, res, next) => {
   try {
     const { postId } = req.params;
+    const {caption} = req.body;
+    if(!caption) {
+      return next(new ApiError(404, 'All fields are required'));
+    }
 
     const post = await Post.findById(postId);
     if (!post) {
@@ -75,15 +75,13 @@ const updatePost = async (req, res, next) => {
     }
 
     if (post.user.equals(req.user._id)) {
-      await Post.findByIdAndUpdate(postId, req.body, {
-        new: true,
-        runValidators: true,
-      });
+      await post.updateOne({caption:caption});
+      await post.save();
     } else {
       return next(new ApiError(400, "You can't update this post"));
     }
-
-    res.status(200).json({ msg: "Post updated successfull" });
+     const updatedPost = await Post.findById(postId);
+    res.status(200).json({ post:updatedPost, msg: "Post updated successfull" });
   } catch (error) {
     console.log(error);
     next(error);
@@ -99,13 +97,14 @@ const deletePost = async (req, res, next) => {
     }
     if (post.user.equals(req.user._id)) {
       await Post.findByIdAndDelete(postId);
+      await Comment.deleteMany({post:postId});
     } else {
       return next(new ApiError(400, "You can't delete this post"));
     }
-    res.status(200).json({ post, msg: "Post deleted successfully" });
+    res.status(200).json({msg: "Post deleted successfully" });
   } catch (error) {
     next(error);
   }
 };
 
-export { createPost, getAllPosts, getSingalPost, updatePost, deletePost };
+export { createPost, getAllPosts, getSingalPost, updatePost, deletePost, getPostsByUser };
