# routes/user.route.js
@@ -1,10 +1,15 @@
 
 import { Router } from 'express';
 const router = Router();
-import {register, login} from '../controllers/user.controller.js';
+import {getAllUsers, getUser, updateUser, friendship} from '../controllers/user.controller.js';
+import {jwtAuth} from '../middlewares/jwtAuth.js';
 
-router.post('/register', register);
-router.post('/login', login);
+
+
+router.get('/', getAllUsers);
+router.get('/profile/:userId', getUser);
+router.put('/update-profile/:userId', updateUser);
+router.post('/toggle-friendship/:userId', jwtAuth, friendship);
 
 export default router;
 
