# swagger.json
@@ -5,7 +5,7 @@
     "description": "API for social-media",
     "title": "Social-media API"
   },
-  "host": "social-media-bhh7.onrender.com",
+  "host": "social-media-bhh7.onrender.com/",
   "securityDefinitions": {
     "jwt": {
       "in": "header",
@@ -14,7 +14,7 @@
     }
   },
   "paths": {
-    "/api/users/login": {
+    "/api/auth/login": {
       "post": {
         "tags": ["Login"],
         "summery": "Login",
@@ -53,7 +53,7 @@
         }
       }
     },
-    "/api/users/register": {
+    "/api/auth/register": {
       "post": {
         "tags": ["Register"],
         "summery": "Register",
@@ -95,6 +95,117 @@
         }
       }
     },
+    "/api/users": {
+      "get": {
+        "tags": ["Get All Users"],
+        "summery": "Users",
+        "description": "Get all posts",
+        "security": [{ "jwt": {} }],
+
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+
+          "404": {
+            "description": "Users not found"
+          },
+          "500": {
+            "description": "Something went wrong!"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/api/users/profile/{userId}": {
+      "get": {
+        "tags": ["Get user profile"],
+        "summery": "User Profile",
+        "description": "Get user profile",
+        "security": [{ "jwt": {} }],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "userId",
+            "description": "User Id",
+            "type": "string",
+            "decription": "The user id"
+          }
+        ],
+
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+
+          "404": {
+            "description": "Post not found"
+          },
+          "500": {
+            "description": "Something went wrong!"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/api/users/update-profile/{userId}": {
+      "parameters": [
+        {
+          "in": "path",
+          "name": "userId",
+          "description": "User Id",
+          "type": "string",
+          "decription": "The user id"
+        }
+      ],
+      "put": {
+        "tags": ["Update user profile"],
+        "summery": "Update user profile by id",
+        "description": "Update user profile",
+        "security": [{ "jwt": {} }],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string"
+                },
+                "email": {
+                  "type": "string"
+                },
+                "password": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+
+          "404": {
+            "description": "Post not found"
+          },
+          "500": {
+            "description": "Something went wrong!"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+
     "/api/posts/create": {
       "post": {
         "tags": ["Create Post"],
@@ -109,7 +220,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "content": {
+                "caption": {
                   "type": "string"
                 },
                 "user": {
@@ -192,6 +303,7 @@
         }
       }
     },
+
     "/api/posts/{postId}/update": {
       "parameters": [
         {
@@ -215,10 +327,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "content": {
-                  "type": "string"
-                },
-                "user": {
+                "caption": {
                   "type": "string"
                 }
               }
@@ -240,7 +349,6 @@
           "401": {
             "description": "Unauthorized"
           }
-          
         }
       }
     },
@@ -317,6 +425,87 @@
         }
       }
     },
+    "/api/comments/{postId}": {
+      "get": {
+        "tags": ["Get Singal comment"],
+        "summery": "Get comment by postId",
+        "description": "Get Singal comment",
+        "security": [{ "jwt": {} }],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "postId",
+            "description": "Post Id",
+            "type": "string",
+            "decription": "The post id"
+          }
+        ],
+
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+
+          "404": {
+            "description": "Post not found"
+          },
+          "500": {
+            "description": "Something went wrong!"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/api/comments/{commentId}/update": {
+      "parameters": [
+        {
+          "in": "path",
+          "name": "commentId",
+          "description": "Comment Id",
+          "type": "string",
+          "decription": "The comment id"
+        }
+      ],
+
+      "put": {
+        "tags": ["Update comment"],
+        "summery": "Update comment by id",
+        "description": "Update Singal comment",
+        "security": [{ "jwt": {} }],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "content": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+
+          "404": {
+            "description": "Comment not found"
+          },
+          "500": {
+            "description": "Something went wrong!"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
     "/api/comments/{id}/delete": {
       "delete": {
         "tags": ["Delete Comment"],
@@ -347,8 +536,8 @@
           "401": {
             "description": "Unauthorized"
           },
-          "400":{
-            "description":"You can't delete this post"
+          "400": {
+            "description": "You can't delete this post"
           }
         }
       }
@@ -363,14 +552,13 @@
           {
             "in": "query",
             "name": "id",
-            "type":"string"
-            
+            "type": "string"
           },
           {
-            "in":"query",
-            "name":"type",
-            "type":"string",
-            "enum":["post","comment"]
+            "in": "query",
+            "name": "type",
+            "type": "string",
+            "enum": ["post", "comment"]
           }
         ],
 
@@ -385,8 +573,107 @@
           "401": {
             "description": "Unauthorized"
           },
-          "404":{
-            "description":"Not found"
+          "404": {
+            "description": "Not found"
+          }
+        }
+      }
+    },
+    "/api/likes/{postId}/post": {
+      "get": {
+        "tags": ["Get like on post"],
+        "summery": "Get like by postId",
+        "description": "Get Singal like",
+        "security": [{ "jwt": {} }],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "postId",
+            "description": "Post Id",
+            "type": "string",
+            "decription": "The post id"
+          }
+        ],
+
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+
+          "404": {
+            "description": "Post not found"
+          },
+          "500": {
+            "description": "Something went wrong!"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/api/likes/{commentId}/comment": {
+      "get": {
+        "tags": ["Get like on comment"],
+        "summery": "Get like by commentId",
+        "description": "Get Singal like",
+        "security": [{ "jwt": {} }],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "commentId",
+            "description": "Comment Id",
+            "type": "string",
+            "decription": "The comment id"
+          }
+        ],
+
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+
+          "404": {
+            "description": "Comment not found"
+          },
+          "500": {
+            "description": "Something went wrong!"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/api/users/toggle-friendship/{userId}": {
+      "post": {
+        "tags": ["Make friendship"],
+        "summery": "User friendship",
+        "description": "Make friendship",
+        "security": [{ "jwt": {} }],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "userId",
+            "description": "User Id",
+            "type": "string",
+            "decription": "The user id"
+          }
+        ],
+
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+
+          "404": {
+            "description": "Post not found"
+          },
+          "500": {
+            "description": "Something went wrong!"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
